@@ -150,3 +150,8 @@ FileListControl.newdialog.title=New Dialog
 # ----------- Property Page ----------
 MngMakeProjectPropertyPage.closedproject=Project Closed
 MngMakeProjectPropertyPage.internalError=An Internal error has occur please check error log.
+
+# Copies from org.eclipse.ui.workbench
+showAdvanced = &Advanced >>
+hideAdvanced = << &Advanced
+NewFolderDialog.folderNameEmpty = Folder name must be specified
